<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/fragmentTextErea"
        android:layout_width="match_parent"
        android:maxLines="100"
        android:layout_height="100dp"
        android:background="#eee"
        android:hint="@string/showText"
        android:textColor="#000000"
        android:textCursorDrawable="@null" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/operator_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/button_operator_more"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/operator_backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/button_operator_backspace"
            style="?android:attr/buttonBarButtonStyle" />
        
        <Button
            android:id="@+id/operator_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/operator_backspace"
            android:layout_toStartOf="@id/operator_backspace"
            android:text="@string/button_operator_clear"
            style="?android:attr/buttonBarButtonStyle" />
    </RelativeLayout>

</LinearLayout>